feat(backend): add RequestFeedbackPendingEvent and notification handling